--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<a href="site-1">Site 1</a>
-<a href="site-2">Site 2</a>
-<a href="site-3">Site 3</a>
-<a href="war-game">War Card Game</a>
+<a href="fortune">Fortune</a>
+<a href="art">Art</a>
+<a href="money">Money</a>
+<a href="war-game">War</a>
