Fixed Index Formatting

--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
-<a href="fortune">Fortune</a>
-<a href="art">Art</a>
-<a href="money">Money</a>
-<a href="war-game">War</a>
-<a href="credits.html">Credits</a>
+<h4> <a href="fortune">Fortune</a> </h4>
+<h4> <a href="art">Art</a> </h4>
+<h4> <a href="money">Money</a> </h4>
+<h4> <a href="war-game">War</a> </h4>
+<h4> <a href="credits.html">Credits</a> </h4>
+
+
+
+
