Added names of all the students to credits in an unordered list (in alphabetical order by last name)

--- a/credits.html
+++ b/credits.html
@@ -1,4 +1,22 @@
-This site was created by the following LWHS Computing 2 Students in Spring 2016:
+<h2> This site was created by the following LWHS Computing 2 Students in Spring 2016: </h2>
+<ul>
+	<li>Max Austin</li>
+	<li>Nathan Ho</li>
+	<li>Ruby Landau-Pincus</li>
+	<li>Isaac Lau</li>
+	<li>David Ludeke</li>
+	<li>Charles Manga</li>
+	<li>Liam Maniscalco</li>
+	<li>Darius Rudominer</li>
+	<li>Noah Wong</li>
+</ul>
 
-Max Austin
+
+
+
+
+
+
+
+
 
