--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <a href="fortune">Fortune</a>
-<a href="art">Art</a>
+<a href="art">Picasso Styles</a>
 <a href="money">Money</a>
 <a href="war-game">War</a>
 <a href="credits.html">Credits</a>
