--- a/art/index.html
+++ b/art/index.html
@@ -51,7 +51,7 @@ h1 {
 </head>
 
 <body>
-  <h1>A Really Really Exciting Title</h1>
+  <h1>Paint Masterpieces Like a Pro</h1>
 
   <div class="mainButtons">
     Pick your art style:
