--- a/art/index.html
+++ b/art/index.html
@@ -63,20 +63,23 @@ h1 {
 
     <script type="application/processing">
       String joke = "no joke yet!";
-      public String mode = "modern";
+      public String style = "modern";
       void setMode(String mode){
          background(0,0,0);
          if(mode.equals("modern")){
+         	style =  "modern";
            background(0,0,0);
           stroke(0,0,0);
           fill(255);
          }
          else if(mode.equals("abstract")){
+         	style ="abstract";
              background(255,0,0);
            stroke(0,0,0);
           fill(255);
          }
          else if(mode.equals("impressionist")){
+         	style = "impressionist";
               fill(0,0,255, 50);
                noStroke();
               background(0,255,0);
@@ -89,7 +92,7 @@ h1 {
         background(50); 
       } 
       void draw() {
-      	if(mode.equals("modern")){
+      	if(style=="modern"){
       		fill(int(random(0,255)),int(random(0,255)),int(random(0,255)));
       		rect(mouseX, mouseY, int(random(5,100)), int (random(5,100)));
       		text(joke, 30, 30);
